--- a/play-audio.html
+++ b/play-audio.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <audio autoplay loop style="display:none;">
-        <source src="Gone Gone Gone.mp3" type="audio/mpeg">
+        <source src="Gone Gone Gone.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 </body>
